removed beforeunload function to fix cookie saving inconsistencies     now updates cookie as well on updating character object     updating character names now works properly in certain instances fixed an issue where mobile site called public servers in test environment added ability to collapse spell slot levels in the spellbook fixed minor styling issues / optimised them reorganized mobile spellbook character section fixed "add to spellbook" button updating on mobile site
added "certifi" import for local environment testing issues

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -249,8 +249,11 @@ body {
 }
 
 .class_list {
-    width: 90%;
+    width: 25%;
+    height: fit-content;
     font-size: 175%;
+    padding: 5px 10px;
+    margin: 12.5px 54px 0px 15px;
 }
 
 .level_input {
@@ -299,6 +302,10 @@ body {
 
 .book_head_text {
     font-size: 200%;
+}
+
+.level_arrow {
+    margin: 7.5px;
 }
 
 .char_container {
